2009-12-16      Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* console/console.c: adapted to new prototype for *_write
	function

2009-11-16	Alan Cudmore <alan.p.cudmore@nasa.gov>

	* startup/init5235.c: Add volatile to prevent newer gcc versions from
	optimizing away.

2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/mcf5235.cfg: Remove RTEMS_BSP_FAMILY.

2009-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/mcf5235.cfg: New (relocated from /make/custom).

2009-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* console/console.c: Reflect termios_baud_to_number having been
	renamed to rtems_termios_baud_to_number.

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RTEMS_BSP_BOOTCARD_OPTIONS.

2009-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Rename BSP_BOOTCARD_OPTIONS to
	RTEMS_BSP_BOOTCARD_OPTIONS. Add RTEMS_BSP_CLEANUP_OPTIONS so all BSPs
	have the same options.

2009-06-12	Chris Johns <chrisj@rtems.org>

	* Makefile.am: Compile the shared bspinit.c.

2009-04-28	Chris Johns <chrisj@rtems.org>

	* start/start.S: Update for boot_card command line change.

2008-12-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsp_specs: Move -e start from *link to *startfile to avoid warning
	for undefined entry symbol when linking relocatables with binutils
	2.19.

2008-10-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, preinstall.am: Use shared stub coverhd.h
	* include/coverhd.h: Removed.

2008-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate bsp.am. Build startup files as side-effect 
	of building libbspstart.a, using automake-rules.

2008-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* clock/clock.c: include "../../../shared/clockdrv_shell.h".
	* Makefile.am: Reflect changes above.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate *_SOURCES.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>
